--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "JWT":{
-    "Secret": "MySuperSecretIsHereKhare2000TryToMakeItGreater"
+    "Secret": "MySuperSecretIsHereKhare2000TryToMakeItGreater",
+    "Issuer": "BadeHavaApp",
+    "Audience": "BadeHavaAppUsers",
+    "Key": "key"
   }
 }
