Create refresh API and fix authentication validation

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,6 @@
   "JWT":{
     "Secret": "MySuperSecretIsHereKhare2000TryToMakeItGreater",
     "Issuer": "BadeHavaApp",
-    "Audience": "BadeHavaAppUsers",
-    "Key": "key"
+    "Audience": "BadeHavaAppUsers"
   }
 }
