Initial PostgresSql setups

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,9 +6,12 @@
     }
   },
   "AllowedHosts": "*",
-  "JWT":{
+  "JWT": {
     "Secret": "MySuperSecretIsHereKhare2000TryToMakeItGreater",
     "Issuer": "BadeHavaApp",
     "Audience": "BadeHavaAppUsers"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=BadeHavaAppDB;Username=BadeHavaUser;Password=BadeHava@Password2000@"
   }
 }
