--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "BadeHavaAppUsers"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=BadeHavaAppDB;Username=BadeHavaUser;Password=BadeHava@Password2000@"
+    "DefaultConnection": "Host=dpg-d4ctlqjipnbc739mplh0-a;Port=5432;Database=badehavaappdb;Username=badehavaappdb_user;Password=1NB23sFvWPSLUtsyPKwvSYSlqqRAB1DB"
   }
 }
