--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "BadeHavaAppUsers"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-d4ctlqjipnbc739mplh0-a;Port=5432;Database=badehavaappdb;Username=badehavaappdb_user;Password=1NB23sFvWPSLUtsyPKwvSYSlqqRAB1DB;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=dpg-d4ctlqjipnbc739mplh0-a.oregon-postgres.render.com;Port=5432;Database=badehavaappdb;Username=badehavaappdb_user;Password=1NB23sFvWPSLUtsyPKwvSYSlqqRAB1DB;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
