--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "BadeHavaAppUsers"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-d4d09fripnbc739oj6m0-a.oregon-postgres.render.com;Port=5432;Database=badehavaappdb_wfjo;Username=badehavaappdb_wfjo_user;Password=ORct3pZTH42p9dYqX4Jhn7sW7gQa6tXb;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=dpg-d4d09fripnbc739oj6m0-a.oregon-postgres.render.com;Port=5432;Database=badehavaappdb_wfjo;Username=badehavaappdb_wfjo_user;Password=ORct3pZTH42p9dYqX4Jhn7sW7gQa6tXb;SslMode=Require;Trust Server Certificate=true;Timeout=30;Command Timeout=60"
   }
 }
